test/positive/i14.cfr
// https://github.com/gsdlab/clafer/issues/14

abstract A
	a : integer


A1 : A
	[ a = 10 ]