test/failing/root.cfr
// a href="https://github.com/gsdlab/clafer/issues/57">https://github.com/gsdlab/clafer/issues/57</a>

a
    b ?
b ?
[ some a.b ]
[ some root.b ]
